fixing z-index of nav

--- a/css/graph.css
+++ b/css/graph.css
@@ -1,6 +1,7 @@
 .fixed {
     position: fixed;
     top: 0;
+    z-index: 1001;
 }
 
 rect {
